--- a/ghostty/config
+++ b/ghostty/config
@@ -39,16 +39,13 @@ keybind = ctrl+shift+h=goto_split:left
 keybind = ctrl+shift+j=goto_split:bottom
 keybind = ctrl+shift+k=goto_split:top
 keybind = ctrl+shift+l=goto_split:right
-keybind = super+shift+t=new_tab
-keybind = super+shift+h=previous_tab
-keybind = super+shift+l=next_tab
-keybind = super+shift+comma=move_tab:-1
-keybind = super+shift+period=move_tab:1
+keybind = alt+shift+t=new_tab
+keybind = alt+shift+h=previous_tab
+keybind = alt+shift+l=next_tab
+keybind = alt+shift+comma=move_tab:-1
+keybind = alt+shift+period=move_tab:1
 keybind = ctrl+shift+c=copy_to_clipboard
 keybind = ctrl+shift+v=paste_from_clipboard
-keybind = super+shift+q=new_split:auto
-keybind = super+shift+i=inspector:toggle
-keybind = super+shift+m=toggle_split_zoom
 keybind = ctrl+shift+,=reload_config
-keybind = super+shift+s=write_screen_file:open
-keybind = super+shift+w=close_surface
+keybind = alt+shift+s=write_screen_file:open
+keybind = alt+shift+w=close_surface
