--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -46,7 +46,8 @@ exec-once = wl-paste --type text --watch cliphist store # Stores only text data
 exec-once = wl-paste --type image --watch cliphist store # Stores only image data
 exec-once = hyprsunset
 exec-once = wl-clip-persist --clipboard regular
-
+# Quake Terminal Autostart
+exec-once = ghostty --title=quake-terminal --background-opacity=1 --gtk-titlebar=false
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -115,6 +116,8 @@ decoration {
     active_opacity = 1.0
     inactive_opacity = 1.0
 
+    dim_special = 0
+
     shadow {
         enabled = true
         range = 1
@@ -181,6 +184,7 @@ animations {
     animation = workspaces,    1,     1.94,  almostLinear, fade
     animation = workspacesIn,  1,     1.21,  almostLinear, fade
     animation = workspacesOut, 1,     1.94,  almostLinear, fade
+    animation = specialWorkspace, 1, 3, easeOutQuint, slidevert
     animation = zoomFactor,    1,     7,     quick
 }
 
@@ -195,6 +199,16 @@ windowrulev2 = float, class:feh
 
 windowrulev2 = workspace special:Discord, class:^(discord)$
 windowrulev2 = workspace special:Discord, class:^(vesktop)$
+windowrulev2 = dimaround, class:^(discord)$
+windowrulev2 = dimaround, class:^(vesktop)$
+
+# Quake Terminal Rules
+windowrulev2 = workspace special:quake, initialTitle:^(quake-terminal)$
+windowrulev2 = float, initialTitle:^(quake-terminal)$
+windowrulev2 = size 70% 45%, initialTitle:^(quake-terminal)$
+windowrulev2 = move 15% 54.5%, initialTitle:^(quake-terminal)$
+windowrulev2 = rounding 15, initialTitle:^(quake-terminal)$
+
 
 # Floating
 windowrulev2 = center, title:^(Open File)(.*)$
@@ -379,6 +393,9 @@ bind = $mainMod SHIFT, B, exec, ~/.config/hypr/scripts/helium-safe-launch
 
 # Terminal
 bind = $mainMod, Q, exec, $terminal
+
+# Quake Terminal Toggle
+bind = $mainMod SHIFT, Q, togglespecialworkspace, quake
 
 # Exit
 bind = $mainMod SHIFT, ESCAPE, exec, uwsm stop
