--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -143,12 +143,14 @@ group {
     col.border_locked_inactive = rgba(595959aa)
 
     groupbar {
+        render_titles = true
         font_family = JetBrainsMono Nerd Font
         font_size = 10
+        height = 14
         text_color = rgba(c0caf5ee)
-        col.active = rgba(7aa2f788)
+        col.active = rgba(7aa2f7ff)
         col.inactive = rgba(24283b88)
-        col.locked_active = rgba(7aa2f788)
+        col.locked_active = rgba(7aa2f7ff)
         col.locked_inactive = rgba(24283b88)
     }
 }
@@ -379,7 +381,7 @@ bind = $mainMod CONTROL, B, exec, killall -SIGUSR2 waybar && notify-send "Waybar
 # Screenshot
 bind = $mainMod SHIFT, S, exec, grim -g "$(slurp -o -r -c '##ff0000ff')" -t ppm - | satty --filename - --fullscreen --output-filename ~/Pictures/Screenshots/$(date '+%Y%m%d-%H:%M:%S').png
 
-# Window-only sScreenshot
+# Window-only Screenshot
 bind = $mainMod CONTROL, S, exec, ~/.config/hypr/scripts/window_screenshot.sh
 
 # Rofi
@@ -414,6 +416,7 @@ bind = $mainMod SHIFT, F, fullscreen,
 # Grouping
 bind = $mainMod, G, togglegroup
 bind = $mainMod, TAB, changegroupactive, f
+bind = $mainMod SHIFT, G, moveoutofgroup
 
 # Move window into group (Super + Alt + Direction)
 bind = $mainMod ALT, H, moveintogroup, l
@@ -425,9 +428,6 @@ bind = $mainMod ALT, left, moveintogroup, l
 bind = $mainMod ALT, right, moveintogroup, r
 bind = $mainMod ALT, up, moveintogroup, u
 bind = $mainMod ALT, down, moveintogroup, d
-
-# Move window out of group
-bind = $mainMod ALT, G, moveoutofgroup
 
 # Clipboard Manager (Text) - Win+V style
 bind = $mainMod, V, exec, cliphist list | rofi -dmenu -display-columns 2 -show-icons -p "󰅇" | cliphist decode | wl-copy
@@ -540,3 +540,5 @@ bind=, XF86AudioPause, exec, playerctl pause
 bind=, XF86AudioPlay, exec, playerctl play
 
 bind=, XF86AudioPrev, exec, playerctl previous
+
+
